@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>net.sourceforge.phpeclipse.parserbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.trustudio.php.core.PHPscriptbuilder</name>
 			<arguments>
 			</arguments>
@@ -14,5 +19,6 @@
 	<natures>
 		<nature>org.trustudio.oss.core.scriptnature</nature>
 		<nature>org.trustudio.php.core.phpnature</nature>
+		<nature>net.sourceforge.phpeclipse.phpnature</nature>
 	</natures>
 </projectDescription>
