@@ -65,10 +65,11 @@ Object.extend(Object, {
   }
 });
 
-Function.prototype.bind = function() {
+Function.prototype.bind = function() {  
   var __method = this, args = $A(arguments), object = args.shift();
+  
   return function() {
-    return __method.apply(object, args.concat($A(arguments)));
+	return __method.apply(object, args.concat($A(arguments)));
   }
 }
 
