@@ -1,5 +1,12 @@
 1.99.13
 - Internet Explorer 7 is now correctly detected and p4a does not include png and pure css menu hack
+- First Ajax Popup implementation
+- P4A_MASK::isPopup() was added
+- P4A_MASK::getAsString() was added
+- P4A::openPopup() was added
+- P4A::closePopup() was added
+- popup.js was added
+- popup.tpl was added
 
 1.99.12
 - a bug on P4A_DB_Source with multivalue fields was fixed
